--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             },           
             12: {
                 campos: [],
-                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Escada semiótica</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/8N52uaj.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'> </div></div>",
+                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Escada semiótica</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/8N52uaj.png' alt='...' onclick=\"openModal('https://i.imgur.com/8N52uaj.png')\"> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...' onclick=\"openModal('https://i.imgur.com/00BsA8k.png')\"> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...' onclick=\"openModal('https://i.imgur.com/FpTZ2ky.png')\"> </div></div>",
                 processo: "DSC - Escada Semiotica",
                 exibirBlocoExplicacao: false
             },           
